DevOps/YAML/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papi
spec:
  selector:
    matchLabels:
      app: papi
  template:
    metadata:
      labels:
        app: papi
    spec:
      containers:
      - name: papi
        image: cr0mius/papi:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 5000
    targetPort: 5000
